# theboys-launcher

./: .gitattributes  .gitignore  AI_IMPLEMENTATION_PROMPT.md  BUILD_GUIDE.md  CODE_QUALITY_AND_DOCUMENTATION.md  CONSISTENT_FILE_LOCATION_CHANGES.md  CROSS_PLATFORM_COMPATIBILITY.md  CUSTOM_INSTALLATION_VERIFICATION.md  DEVELOPMENT_UPDATE_GUIDE.md  DEVELOPMENT_WORKFLOW.md  FEATURE_COMPARISON.md  GUI_INSTALLER_GUIDE.md  GUI_INSTALLER_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALL_MACOS.md  LICENSE  LICENSE.txt  MACOS_DEVELOPMENT_PLAN.md  MACOS_SUPPORT_PLAN.md  Makefile  PLATFORM_SPECIFIC_CHANGES.md  PORTABLE_DEPLOYMENT.md  QUICK_START_GUIDE.md  README.md  REBUILD_PLAN.md  RELEASE_PROCESS.md  SECURITY_REVIEW.md  TAURI_MIGRATION_PLAN.md  TESTING_REPORT.md  TESTING_SUMMARY.md  TheBoysLauncher.iss  WINDOWS-SETUP.md  build-all.bat  build-all.sh  build-release.js  build.bat  build.ps1  config.go  console_darwin.go  console_linux.go  (+78 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/capabilities_backup/: main.json
src-tauri/icons/: README.md
src-tauri/src/: api_response.rs  main.rs  packwiz.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/downloader/: mod.rs
src-tauri/src/java/: mod.rs
src-tauri/src/launcher/: launch_manager.rs  mod.rs  modloader.rs
src-tauri/src/models/: mod.rs
src-tauri/src/modpack/: mod.rs
src-tauri/src/prism/: mod.rs
src-tauri/src/update/: mod.rs
src-tauri/src/utils/: config.rs  error_handler.rs  file.rs  mod.rs  network.rs  performance.rs  system.rs
src-tauri/tests/: mod.rs
src-tauri/tests/integration/: launcher_workflow_tests.rs  mod.rs
src-tauri/tests/unit/: commands_tests.rs  (+3 more)
(+251 files in other folders)
