[package]
name = "theboys-launcher"
version = "1.1.0"
description = "A Minecraft modpack launcher"
authors = ["TheBoys Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.18", features = ["v4"] }
dirs = "6.0"
fs_extra = "1.3"
zip = "2.2"
flate2 = "1.0"
tar = "0.4"
url = "2.5"
semver = "1.0"
num_cpus = "1.16"
which = "7.0"
regex = "1.11"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
tempfile = "3.8"
wiremock = "0.6"
serde_test = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_SystemInformation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
